--- a/style.css
+++ b/style.css
@@ -110,10 +110,23 @@ header a
   display:inline-block;
   white-space:nowrap;
 }
+u:hover
+{
+  color:#ff0266;
+  transition-duration:0.3s;
+  transform:scale(1.07);
+}
+u{
+  color:#03dac6;
+  font-size:1.2em;
+  text-decoration:none;
+  transition-duration:0.3s;
+  display:inline-block;
+  white-space:nowrap;
 
+}
 header a:hover
 {
-
   color:#ff0266;
   transition-duration:0.3s;
   transform:scale(1.07);
